# bookmark-manager-app

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: database.py
backend/app/domains/auth/: models.py  router.py  schemas.py  service.py
